--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main">
+        <activity android:name=".main" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".loginManual" />
-        <activity android:name=".nucleo"></activity>
+        <activity android:name=".loginManual" android:screenOrientation="portrait"/>
+        <activity android:name=".nucleo" android:screenOrientation="landscape" ></activity>
     </application>
 
 </manifest>
