--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".loginManual" android:screenOrientation="portrait"/>
-        <activity android:name=".nucleo" android:screenOrientation="landscape" ></activity>
+        <activity android:name=".nucleo" android:label="@string/app_name" android:screenOrientation="landscape" android:theme="@style/AppTheme" ></activity>
     </application>
 
 </manifest>
