--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="arenzo.alejandroochoa.ccure">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".Realm.baseDatos"
@@ -20,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".loginManual" android:screenOrientation="portrait"/>
-        <activity android:name=".nucleo" android:label="@string/app_name" android:screenOrientation="landscape" android:theme="@style/AppTheme" ></activity>
+        <activity android:name=".nucleo" android:label="@string/app_name" android:screenOrientation="portrait" android:theme="@style/AppTheme" ></activity>
     </application>
 
 </manifest>
