--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         </activity>
         <activity android:name=".loginManual" android:screenOrientation="portrait"/>
         <activity android:name=".nucleo" android:label="@string/app_name" android:screenOrientation="portrait" android:theme="@style/AppTheme" ></activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
