--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 'android-O'
-    buildToolsVersion '26.0.0 rc2'
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "arenzo.alejandroochoa.ccure"
         minSdkVersion 19
@@ -10,11 +10,6 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        javaCompileOptions {
-            annotationProcessorOptions {
-                includeCompileClasspath = true
-            }
-        }
     }
     buildTypes {
         release {
@@ -36,10 +31,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'io.realm:realm-android:+'
+    compile 'io.realm:realm-android:0.82.1'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.kyleduo.switchbutton:library:1.4.6'
     testCompile 'junit:junit:4.12'
 }
