--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
             android:resource="@array/preloaded_fonts" />
 
         <activity android:name=".Activities.configuracionUnica"
+            android:noHistory="true"
             android:screenOrientation="portrait"></activity>
     </application>
 
